--- a/AXY_AjaxNetStuff group/changelog.txt
+++ b/AXY_AjaxNetStuff group/changelog.txt
@@ -1,3 +1,30 @@
+1.45 2019.11.13
+新增: 使用 兑换码/众筹 自动下发 开关 和/或 变量; 详见 issues #1: https://github.com/aaixy/rmmv-plugins/issues/1
+变更：2个和公共事件相关的参数修改为可以从公共事件列表中选择，取代了之前的手动输入方式;
+1.44 2019.11.10
+新增: 我的众筹仓库;
+新增: 使用已众筹的记录开新档，从此不怕由于更新导致的存档无法继承;
+新增: 选集功能;
+新增: 参数: 开新档后自动保存;
+新增: 参数: 选集公共事件;
+新增: 参数: 可以使用选集功能的众筹总计阈值;
+变更: 参数: AutoSaveAfterShopping 到 autoSaveAfterShopping 并且移至shopingame settings struce;
+变更: 参数: CommandRemember 到 commandRemember;
+1.43 2019.11.7
+新增: 参数：游戏名称;
+新增: toaster 666rpg.com 信息;
+1.42 2019.11.6
+新增: 众筹中最受欢迎栏目;
+移除: 交易密码;
+变更: 众筹描述字体大小;
+1.41 2019.10.30
+调整: 自动登录逻辑;
+1.40 2019.10.29
+新增: 记住命令;
+修复: 自动登录复选框问题;
+1.39 2019.10.27
+新增: 上下翻页按钮;
+修复: 一些bug;
 1.38 2019.10.23
 调整: 部分参数的单位从px调整为rem;
 1.37 2019.10.19
